# hackathon-agents

./: .env.example  README.md  pyproject.toml
entourage_utils/: agent.py  chat_agent.py  graph_streaming.py  json_utils.py  logging_utils.py  prompt_utils.py
templates/1-simple_assistant/: simple_assistant_example.py
templates/2-restaurant_recommander/: config.py  graph.py  restaurant_recommander_example.py  state.py
templates/2-restaurant_recommander/agents/: reflection_agent.py  restaurant_recommender_agent.py
templates/2-restaurant_recommander/notebooks/: run_agent.ipynb
templates/2-restaurant_recommander/prompts/reflection/: v1.prompt
templates/2-restaurant_recommander/prompts/restaurant_recommender/: v1.prompt
