[project]
name = "hackathon-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "entourage-utils",
  "ipython>=8.32.0",
  "langchain-google-genai>=2.0.11",
  "langchain-ollama>=0.2.3",
]

[tool.uv.sources]
entourage-utils = { git = "ssh://git@github.com/Moonsong-Labs/entourage.git", subdirectory = "entourage-utils", branch = "crystalin/upgrade-langcore"}
